--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.developfreedom.logmein"
+    package="com.juliansparber.urblogin"
     android:installLocation="auto"
     android:versionCode="62"
     android:versionName="0.6.2" >
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.developfreedom.logmein.ui.MainActivity"
+            android:name="com.juliansparber.urblogin.ui.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,13 +28,13 @@
         </activity>
 
         <service
-            android:name="org.developfreedom.logmein.LoginService"
+            android:name="com.juliansparber.urblogin.LoginService"
             android:enabled="true"
             android:exported="true" >
         </service>
 
         <activity
-            android:name="org.developfreedom.logmein.ui.SettingsActivity"
+            android:name="com.juliansparber.urblogin.ui.SettingsActivity"
             android:label="@string/title_activity_settings" >
         </activity>
     </application>
